--- a/Frontend-ProyectoWeb/src/app/header/header.component.html
+++ b/Frontend-ProyectoWeb/src/app/header/header.component.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand" routerLink="home">
           <strong>Transmilenio</strong>
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+      <button id="btnNavBar" class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
                   <a class="nav-link active" aria-current="page" routerLink="home" routerLinkActive="menuSelected"
                     data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Inicio</a>
               </li>
-              <li class="nav-item">
+              <li id="linkDrivers" class="nav-item">
                   <a class="nav-link active" routerLink="driver/list" routerLinkActive="menuSelected"
                     data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Conductores</a>
               </li>
