--- a/Frontend-ProyectoWeb/src/app/header/header.component.html
+++ b/Frontend-ProyectoWeb/src/app/header/header.component.html
@@ -29,5 +29,6 @@
             </li>
           </ul>
       </div>
+      <button pButton type="button" (click)="logout()" class="p-button-danger btn-sm my-4">Cerrar Sesión</button>
   </div>
 </nav>
