--- a/Frontend-ProyectoWeb/src/app/bus/bus-list/bus-list.component.html
+++ b/Frontend-ProyectoWeb/src/app/bus/bus-list/bus-list.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="!hasRoleAdmin; else noAuthorization">
 <div class="container pt-5 title-color">
   <h1 class="title-color text-center">Listado de Buses - Transmilenio </h1>
 </div>
@@ -31,4 +32,10 @@
       </tbody>
   </table>
 </div>
+</ng-container>
+<ng-template #noAuthorization>
+  <div class="text-center">
+    <p>No puede acceder a este contenido.</p>
+  </div>
+</ng-template>
 
