config auth views

--- a/Frontend-ProyectoWeb/src/app/assignment/assignment.component.html
+++ b/Frontend-ProyectoWeb/src/app/assignment/assignment.component.html
@@ -58,7 +58,7 @@
 </ng-container>
 
 <ng-template #noAssignment>
-  <div class="text-center mt-5">
-    <p>No hay asignaciones en el sistema</p>
+  <div class="text-center title-permission">
+    <h5>No hay asignaciones en el sistema</h5>
   </div>
 </ng-template>
