--- a/Frontend-ProyectoWeb/src/app/bus/bus-list/bus-list.component.html
+++ b/Frontend-ProyectoWeb/src/app/bus/bus-list/bus-list.component.html
@@ -34,8 +34,8 @@
 </div>
 </ng-container>
 <ng-template #noAuthorization>
-  <div class="text-center">
-    <p>No puede acceder a este contenido.</p>
+  <div class="title-color text-center title-permission">
+    <h3>No puede acceder a este contenido.</h3>
   </div>
 </ng-template>
 
