--- a/Frontend-ProyectoWeb/src/app/bus/bus-list/bus-list.component.html
+++ b/Frontend-ProyectoWeb/src/app/bus/bus-list/bus-list.component.html
@@ -16,7 +16,7 @@
           </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let bus of buses">
+          <tr class="buses" *ngFor="let bus of buses">
               <td class="table-text">{{bus.plate}}</td>
               <td class="table-text">{{bus.model}}</td>
               <td>
