--- a/Frontend-ProyectoWeb/src/app/bus/form-bus/form-bus.component.html
+++ b/Frontend-ProyectoWeb/src/app/bus/form-bus/form-bus.component.html
@@ -1,4 +1,4 @@
-<h2 class="m-5 text-center">{{title}}</h2>
+<h2 class="m-5 text-center title-color">{{title}}</h2>
 <p-card class="flex justify-content-center">
   <form [formGroup]="busForm" (ngSubmit)="onSubmit()">
 
