--- a/Frontend-ProyectoWeb/src/app/header/header.component.html
+++ b/Frontend-ProyectoWeb/src/app/header/header.component.html
@@ -14,7 +14,7 @@
                   <a class="nav-link active" aria-current="page" routerLink="home" routerLinkActive="menuSelected"
                     data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Inicio</a>
               </li>
-              <li id="linkDrivers" class="nav-item">
+              <li id="linkdrivers" class="nav-item">
                   <a class="nav-link active" routerLink="driver/list" routerLinkActive="menuSelected"
                     data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Conductores</a>
               </li>
@@ -24,14 +24,14 @@
               <li class="nav-item">
                   <a class="nav-link active" routerLink="route/list">Rutas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" *ngIf="!isLogged" routerLink="assignment">Asignación</a>
+              <li id="assignId" class="nav-item">
+                <a class="nav-link active" *ngIf="isLoggedIn$ | async" routerLink="assignment">Asignación</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" routerLink="route/consult/list">Consultar Rutas</a>
+                <a class="nav-link active" *ngIf="!(isLoggedIn$ | async)"  routerLink="route/consult/list">Consultar Rutas</a>
             </li>
           </ul>
       </div>
-      <button pButton type="button" (click)="logout()" class="p-button-danger btn-sm my-4">Cerrar Sesión</button>
+      <button pButton type="button" *ngIf="isLoggedIn$ | async" (click)="logout()" class="p-button-danger btn-sm my-4">Cerrar Sesión</button>
   </div>
 </nav>
