--- a/Frontend-ProyectoWeb/src/app/route/route-stations-view/route-stations-view.component.html
+++ b/Frontend-ProyectoWeb/src/app/route/route-stations-view/route-stations-view.component.html
@@ -1,5 +1,5 @@
 <div class="mt-5 text-center">
-  <h4>Estaciones asignadas</h4>
+  <h4 class="text-center title-permission">Estaciones asignadas</h4>
   <p-listbox [options]="stations" optionLabel="name" class="flex justify-content-center"></p-listbox>
   <button type="button" class="btn btn-danger mt-5" (click)="goBack()">Salir</button>
 </div>
